--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body {
-    background-color: black;
+    background-color: #2b2b2b;
+	margin: 0;
 }
 ::-webkit-scrollbar {
-    width: 20px;
+    width: 5px;
 }
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
@@ -16,30 +17,99 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background: #b30000;
 }
-.shadow {
-    text-shadow: 5px 2px 4px darkred;
-}
-.task_bar {
-    overflow: hidden;
-    background-color: red;
-}
-.task_bar a {
-    float: left;
-    color: darkred;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-.task_bar a:hover {
-    background-color: darkgray;
-    color: darkred;
-}
-.task_bar_active {
-    background-color: grey;
-    color: darkred;
+@media only screen and (min-width: 601px) {
+	.task_bar {
+		overflow: hidden;
+		background-color: #5c5c5c;
+		position: fixed;
+		top: 0;
+		width: 100%;
+	}
+	.task_bar a {
+		float: left;
+		display: block;
+		color: white;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+		font-size: 17px;
+	}
+	.task_bar a:hover {
+		background-color: red;
+		color: white;
+	}
+	.task_bar_active {
+		background-color: #750000;
+		color: white;
 
+	}
+	.task_bar a {
+		font-weight: bolder;
+	}
+	.main {
+		padding: 16px;
+		margin-top: 30px;
+		
+	}
 }
-.task_bar a {
-    font-weight: bolder;
+@media only screen and (max-width: 600px) {
+	.top_bar_mobile {
+		overflow: hidden;
+		background-color: #5c5c5c;
+	}
+	.top_bar_mobile a {
+		float: left;
+		font-size: 16px;
+		color: white;
+		text-align: center;
+		padding: 14px 16px;
+		text-decoration: none;
+	}
+	.dropdown {
+		float: left;
+		overflow: hidden;
+	}
+	.dropdown .dropbtn {
+		font-size: 16px;
+		border: none;
+		outline: none;
+		color: white;
+		padding: 14px 16px;
+		background-color: inherit;
+		font-family: inherit;
+		margin: 0;
+	}
+	.top_bar_mobile a:hover, .dropdown:hover .dropbtn {
+		background-color: darkred;
+	}
+	.dropdown-content {
+		display: none;
+		position: absolute;
+		background-color: #5c5c5c;
+		min-width: 160px;
+		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+		z-index: 1;
+	}
+	.dropdown-content a {
+		float: none;
+		color: white;
+		padding: 12px 16px;
+		text-decoration: none;
+		display: block;
+		text-align: left;
+	}
+	.dropdown-content a:hover {
+		background-color: red;
+	}
+	.dropdown:hover .dropdown-content {
+		display: block;
+	}
+	.task_bar_active_mobile {
+		background-color: #750000;
+		color: white;
+	}
+	.mobile_scale {
+		width: 40%;
+		height: 40%;
+	}
 }
